Dashboards media query

--- a/frontend/src/components/committees/committeeCard/CommitteeCard.scss
+++ b/frontend/src/components/committees/committeeCard/CommitteeCard.scss
@@ -71,6 +71,7 @@
       }
 
       .update-committee-member-btn {
+        font-size: $sfs;
       }
     }
   }
@@ -174,6 +175,7 @@
       }
 
       .update-committee-member-btn {
+        
       }
     }
   }
