--- a/frontend/src/styles/Variables.scss
+++ b/frontend/src/styles/Variables.scss
@@ -34,6 +34,7 @@ $lfw: 800;
 // Background
 $navbar-bg: #97c3e7;
 $header: #f0f8ff;
+$mobile-header-bg: #c77dff;
 $priest-header-bg: #e6e6facc;
 $main-bg: #f8f8ff;
 $section-bg: #ebf2fa;
