--- a/frontend/src/components/forms/committee/AddCommittee.scss
+++ b/frontend/src/components/forms/committee/AddCommittee.scss
@@ -3,6 +3,7 @@
 
 .add-committee-modal {
   @include modal;
+  z-index: 999999;
 
   .add-committee-popup {
     @include popupBox;
@@ -87,4 +88,140 @@
       }
     }
   }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .add-committee-modal {
+    top: 0;
+    left: 0;
+
+    .add-committee-popup {
+      width: $tablet;
+      @include verticalScrollbar;
+
+      .close-popup {
+        font-size: $sfs;
+      }
+
+      .add-committee-title {
+        font-size: $nfs;
+      }
+
+      .add-committee-member-form {
+        .inputs-wrapper {
+          @include flexColumn;
+        }
+        .input-container {
+          .input-icon {
+            font-size: $sfs;
+          }
+
+          .input-field {
+            font-size: $sfs;
+          }
+
+          .input-label {
+            font-size: $sfs;
+          }
+        }
+
+        .input-consent {
+          font-size: $sfs;
+
+          .consent-checkbox {
+            height: $sfs;
+            width: $sfs;
+            cursor: pointer;
+          }
+
+          .terms-of-user {
+            font-size: $sfs;
+          }
+        }
+
+        .error-consent-text {
+          font-size: $sfs;
+        }
+
+        .add-committee-btn {
+          font-size: $sfs;
+        }
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .add-committee-modal {
+    top: 0;
+    left: 0;
+
+    .add-committee-popup {
+      width: $laptop;
+      @include verticalScrollbar;
+
+      .close-popup {
+        font-size: $nfs;
+      }
+
+      .add-committee-title {
+        font-size: $afs;
+      }
+
+      .add-committee-member-form {
+        .inputs-wrapper {
+          @include flexColumn;
+        }
+        .input-container {
+          .input-icon {
+            font-size: $nfs;
+          }
+
+          .input-field {
+            font-size: $nfs;
+          }
+
+          .input-label {
+            font-size: $nfs;
+          }
+        }
+
+        .input-consent {
+          font-size: $nfs;
+
+          .consent-checkbox {
+            height: $nfs;
+            width: $nfs;
+            cursor: pointer;
+          }
+
+          .terms-of-user {
+            font-size: $nfs;
+          }
+        }
+
+        .error-consent-text {
+          font-size: $nfs;
+        }
+
+        .add-committee-btn {
+          font-size: $nfs;
+        }
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
