--- a/frontend/src/components/forms/updateMemberProfile/UpdateMemberProfile.scss
+++ b/frontend/src/components/forms/updateMemberProfile/UpdateMemberProfile.scss
@@ -97,3 +97,59 @@
     }
   }
 }
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .update-user-profile-wrapper {
+    width: $mobile;
+    margin: auto;
+
+    .update-user-profile-fieldset {
+      width: 100%;
+      padding: 0;
+
+      .update-user-profile-form {
+        .inputs-wrapper {
+          @include flexColumn;
+        }
+
+        .input-consent {
+          font-size: $sfs;
+          margin: 1rem 0rem;
+        }
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .update-user-profile-wrapper {
+    width: $mobile;
+    margin: auto;
+
+    .update-user-profile-fieldset {
+      padding: 0;
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .update-user-profile-wrapper {
+    width: $mobile;
+    margin: auto;
+
+    .update-user-profile-fieldset {
+      padding: 0;
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+}
