--- a/frontend/src/components/parishAdmin/layout/adminDashboardView/AdminDashboardView.scss
+++ b/frontend/src/components/parishAdmin/layout/adminDashboardView/AdminDashboardView.scss
@@ -3,4 +3,40 @@
 
 .admin-dashboard-right-box-wrapper {
   width: $laptop;
+  margin: 1rem auto;
+}
+
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .admin-dashboard-right-box-wrapper {
+    width: $mobile;
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .admin-dashboard-right-box-wrapper {
+    width: $mobile;
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .admin-dashboard-right-box-wrapper {
+    width: $tablet;
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+
+
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+  .admin-dashboard-right-box-wrapper {
+    width: $desktop;
+  }
 }
