--- a/frontend/src/components/parishAdmin/layout/adminHeader/AdminHeader.scss
+++ b/frontend/src/components/parishAdmin/layout/adminHeader/AdminHeader.scss
@@ -1,5 +1,5 @@
-@import '../../../../styles/Variables.scss';
-@import '../../../../styles/Mixins.scss';
+@import "../../../../styles/Variables.scss";
+@import "../../../../styles/Mixins.scss";
 
 .admin-dashboard-header {
   @include flexSpaceBetween;
@@ -26,7 +26,7 @@
       }
 
       .passive-admin-dashboard-header-icon {
-        color: $green;
+        color: $iconColor;
         font-size: $aafs;
         cursor: pointer;
 
@@ -36,4 +36,51 @@
       }
     }
   }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .admin-dashboard-header {
+    display: none;
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .admin-dashboard-header {
+    display: none;
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .admin-dashboard-header {
+    @include flexSpaceBetween;
+    padding: 1rem;
+    background-color: $priest-header-bg;
+
+    .admin-image-container {
+      display: none;
+    }
+
+    .admin-dashboard-header-items {
+      .admin-dashboard-header-item {
+        .active-admin-dashboard-header-icon {
+          font-size: $afs;
+        }
+
+        .passive-admin-dashboard-header-icon {
+          font-size: $afs;
+        }
+      }
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
