--- a/frontend/src/components/parishAdmin/members/Members.scss
+++ b/frontend/src/components/parishAdmin/members/Members.scss
@@ -1,11 +1,11 @@
 @import "../../../styles/Mixins.scss";
 @import "../../../styles/Variables.scss";
 
-.members-container {
+.parish-members-container {
   width: $mobile;
   margin: 1rem auto;
 
-  .members-title {
+  .parish-members-title {
     @include subTitle;
     text-align: center;
     margin: 2rem 0;
@@ -37,4 +37,63 @@
       }
     }
   }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .parish-members-container {
+    width: $mobile;
+
+    .parish-members-title {
+      font-size: $nfs;
+    }
+
+    .member-delete-confirmation-modal {
+      @include mobileDeleteConfirmationModal;
+      height: 13rem;
+
+      .delete-confirmation-title {
+        font-size: $nfs;
+      }
+
+      .delete-confirmation-statement {
+        font-size: $sfs;
+      }
+
+      .confirmation-buttons-wrapper {
+        font-size: $nfs;
+
+        .confirm-delete-btn {
+          font-size: $sfs;
+        }
+
+        .cancel-delete-btn {
+          font-size: $sfs;
+        }
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .parish-members-container {
+    width: $mobile;
+
+    .parish-members-title {
+      font-size: $afs;
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
