--- a/frontend/src/components/parishPriest/dashboardSummary/DashboardSummary.scss
+++ b/frontend/src/components/parishPriest/dashboardSummary/DashboardSummary.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/Variables.scss';
-@import '../../../styles/Mixins.scss';
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
 .priest-dashboard-summary {
   width: $laptop;
@@ -8,43 +8,45 @@
   .priest-dashboard-summary-title {
     @include subTitle;
   }
+}
 
-  .parishioners-participation-wrapper {
-    .box-text {
-      @include flexRow;
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .priest-dashboard-summary {
+    width: $mobile;
 
-      .box-title {
-        padding-left: 2rem;
-      }
-      .box-count {
-      }
-
-      .box-link {
-        color: $blue;
-      }
+    .priest-dashboard-summary-title {
+      font-size: $nfs;
     }
   }
+}
 
-  .summary-wrapper {
-    @include twoGridTemplateEqualColumns;
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .priest-dashboard-summary {
+    width: $mobile;
 
-    .box {
-      @include shadow1;
-      @include flexColumn;
-
-      .box-text {
-        @include flexRow;
-
-        .box-title {
-          padding-left: 2rem;
-        }
-        .box-count {
-        }
-
-        .box-link {
-          color: $blue;
-        }
-      }
+    .priest-dashboard-summary-title {
+      font-size: $afs;
     }
   }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .priest-dashboard-summary {
+    width: $tablet;
+
+    .priest-dashboard-summary-title {
+      font-size: $afs;
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
