--- a/frontend/src/components/user/addresses/Addresses.scss
+++ b/frontend/src/components/user/addresses/Addresses.scss
@@ -49,3 +49,87 @@
     }
   }
 }
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .member-addresses-wrapper {
+    width: $mobile;
+
+    .member-address-title {
+      font-size: $nfs;
+    }
+
+    .add-new-user-address {
+      @include flexSpaceBetween;
+      margin-bottom: 1rem;
+
+      .add-member-title {
+        font-size: $sfs;
+      }
+
+      .add-new-address-btn {
+        font-size: $sfs;
+      }
+    }
+
+    .address-delete-confirmation-modal {
+      @include mobileDeleteConfirmationModal;
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .member-addresses-wrapper {
+    width: $mobile;
+
+    .member-address-title {
+      font-size: $nfs;
+    }
+
+    .add-new-user-address {
+      @include flexSpaceBetween;
+      margin-bottom: 1rem;
+
+      .add-member-title {
+        font-size: $sfs;
+      }
+
+      .add-new-address-btn {
+        font-size: $sfs;
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .member-addresses-wrapper {
+    width: $mobile;
+
+    .member-address-title {
+      font-size: $afs;
+    }
+
+    .add-new-user-address {
+      @include flexSpaceBetween;
+      margin-bottom: 1rem;
+
+      .add-member-title {
+        font-size: $nfs;
+      }
+
+      .add-new-address-btn {
+        font-size: $nfs;
+      }
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+}
