--- a/frontend/src/components/user/servicesRequest/ServicesRequest.scss
+++ b/frontend/src/components/user/servicesRequest/ServicesRequest.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/Variables.scss';
-@import '../../../styles/Mixins.scss';
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
 .user-service-request-container {
   width: $laptop;
@@ -10,22 +10,62 @@
 
   .service-paragraph {
     @include paragraph;
-    margin-bottom: 2rem
+    margin-bottom: 2rem;
   }
+}
 
-  .user-service-request-tabs {
-    @include flexCenter;
-    gap: 0.1rem;
-
-    .active-user-service-request-tab {
-      @include tab;
-      background-color: $userSidebar-bg;
-      cursor: pointer;
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .user-service-request-container {
+    width: $mobile;
+    margin: 0.1rem auto;
+    .user-service-request-title {
+      font-size: $nfs;
+      text-align: center;
     }
 
-    .passive-user-service-request-tab {
-      @include tab;
-      cursor: pointer;
+    .service-paragraph {
+      font-size: $sfs;
     }
   }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .user-service-request-container {
+    width: $mobile;
+    margin: 0.1rem auto;
+    .user-service-request-title {
+      font-size: $nfs;
+      text-align: center;
+    }
+
+    .service-paragraph {
+      font-size: $sfs;
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .user-service-request-container {
+    width: $tablet;
+    margin: 0.1rem auto;
+    .user-service-request-title {
+      font-size: $afs;
+      text-align: center;
+    }
+
+    .service-paragraph {
+      font-size: $nfs;
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
