--- a/frontend/src/styles/Mixins.scss
+++ b/frontend/src/styles/Mixins.scss
@@ -543,6 +543,11 @@
   z-index: 1000;
 }
 
+@mixin mobileDeleteConfirmationModal {
+  width: 90%;
+  height: 13.2rem;
+}
+
 @mixin deleteConfirmationTitle {
   font-size: $afs;
   font-weight: $aafw;
@@ -603,4 +608,37 @@
   &:hover {
     background-color: #c1d3fe;
   }
+}
+
+// ==============================================================================================
+// Vertical Scrollbar styling
+// ==============================================================================================
+
+@mixin verticalScrollbar {
+  max-height: 80vh; /* Limits height to enable scroll */
+  overflow-y: auto; /* Enables vertical scrolling */
+
+  /* Scrollbar styling */
+  &::-webkit-scrollbar {
+    width: 8px; /* Adjust the width of the scrollbar */
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Track color */
+    border-radius: 10px; /* Rounded edges for track */
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #888; /* Thumb color */
+    border-radius: 10px; /* Rounded edges for thumb */
+    border: 2px solid #f1f1f1; /* Optional: Adds padding around thumb */
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Darkens on hover for effect */
+  }
+
+  /* Firefox scrollbar */
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1; /* Thumb color and track color for Firefox */
 }
