--- a/frontend/src/views/adminPages/adminDashboarPage/AdminDashboardPage.scss
+++ b/frontend/src/views/adminPages/adminDashboarPage/AdminDashboardPage.scss
@@ -1,20 +1,103 @@
-@import '../../../styles/Variables.scss';
-@import '../../../styles/Mixins.scss';
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
 .admin-dashboard-page {
-
   .admin-dashboard-page-container {
     width: 100%;
+    min-height: 100vh;
 
     .admin-dashboard-page-title {
       @include title;
       background-color: $sidebar-bg;
     }
 
-    .admin-dashboarw-sections-wrapper {
-      width: 80%;
+    .admin-dashboard-sections-wrapper {
       @include flexRow;
+    }
+  }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .admin-dashboard-page {
+    .admin-dashboard-page-container {
+      width: 100vw;
+
+      .admin-dashboard-page-title {
+        font-size: $nfs;
+        background-color: $mobile-header-bg;
+      }
+
+      .admin-dashboard-sections-wrapper {
+        @include flexColumn;
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .admin-dashboard-page {
+    .admin-dashboard-page-container {
+      width: 100vw;
+
+      .admin-dashboard-page-title {
+        font-size: $nfs;
+        background-color: $mobile-header-bg;
+      }
+
+      .admin-dashboard-sections-wrapper {
+        @include flexColumn;
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .admin-dashboard-page {
+    .admin-dashboard-page-container {
       width: 100%;
+
+      .admin-dashboard-page-title {
+        font-size: $aafs;
+        background-color: $mobile-header-bg;
+      }
+
+      .admin-dashboard-sections-wrapper {
+        @include flexColumn;
+      }
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .admin-dashboard-page {
+    .admin-dashboard-page-container {
+      .admin-dashboard-page-title {
+        @include title;
+        background-color: $sidebar-bg;
+      }
+
+      .admin-dashboard-sections-wrapper {
+        @include flexRow;
+      }
+    }
+  }
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+  .admin-dashboard-page {
+    .admin-dashboard-page-container {
+      .admin-dashboard-page-title {
+        @include title;
+      }
+
+      .admin-dashboard-sections-wrapper {
+        @include flexRow;
+      }
     }
   }
 }
